examples/test/testpolicy11554.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11554
  namespace: namespace477
spec:
  podSelector:
    matchLabels:
      key6: value19
      key27: value33
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value35
      podSelector:
        matchLabels:
          key48: value10
          key47: value46
